recursion.logo.spiral.Spiral.scala.error
Erreur de compilation :
Spiral:8: error: reassignment to val
    steps = steps - 1
          ^Spiral:9: error: reassignment to val
    length = length + increment
           ^